Fix overflowing text

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  overflow: hidden;
 }
 
 .hero-text {
